简化表单：移除名字运势测试的出生日期选择和所有页面的分析维度选择

--- a/pages/select.html
+++ b/pages/select.html
@@ -89,7 +89,7 @@
 
     <!-- 页脚信息 -->
     <footer class="footer">
-        <p>© 2025 AI运势测试 - 您的专属运势顾问</p>
+        <p>2025 AI运势测试 - 您的专属运势顾问</p>
     </footer>
 
     <script src="../assets/js/select.js"></script>
