--- a/pages/tests/fortune.html
+++ b/pages/tests/fortune.html
@@ -46,39 +46,6 @@
                     </div>
                 </div>
 
-                <!-- 出生日期 -->
-                <div class="form-group">
-                    <label for="birthDate">出生日期</label>
-                    <input type="date" id="birthDate" name="birthDate" required>
-                </div>
-
-                <!-- 分析维度选择 -->
-                <div class="form-group">
-                    <label>分析维度（可多选）</label>
-                    <div class="checkbox-group">
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="dimensions" value="wuxing" checked>
-                            <span>五行分析</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="dimensions" value="career" checked>
-                            <span>事业运势</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="dimensions" value="love" checked>
-                            <span>感情姻缘</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="dimensions" value="wealth" checked>
-                            <span>财运分析</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="dimensions" value="health" checked>
-                            <span>健康运势</span>
-                        </label>
-                    </div>
-                </div>
-
                 <!-- 提交按钮 -->
                 <button type="submit" class="submit-button">开始运势分析</button>
             </form>
@@ -101,7 +68,7 @@
 
     <!-- 页脚信息 -->
     <footer class="footer">
-        <p>© 2025 AI运势测试 - 您的专属运势顾问</p>
+        <p>2025 AI运势测试 - 您的专属运势顾问</p>
     </footer>
 
     <script src="../../assets/js/test-page.js"></script>
