--- a/pages/tests/dream.html
+++ b/pages/tests/dream.html
@@ -18,70 +18,41 @@
         <!-- 测试表单区域 -->
         <div class="test-form-container">
             <h1 class="page-title">周公解梦</h1>
-            <p class="page-subtitle">智能解析梦境寓意与预示</p>
+            <p class="page-subtitle">揭示梦境中的玄机与预示</p>
 
             <form id="dreamForm" class="test-form">
                 <!-- 梦境描述 -->
                 <div class="form-group">
                     <label for="dreamContent">梦境描述</label>
                     <textarea id="dreamContent" name="dreamContent" required
-                              placeholder="请详细描述您的梦境内容，包括场景、人物、情节等"
-                              minlength="10"
-                              maxlength="1000"></textarea>
+                              placeholder="请详细描述您的梦境内容..."
+                              maxlength="500"></textarea>
                     <div class="char-counter">
-                        <span id="charCount">0</span>/1000
+                        <span id="charCount">0</span>/500
                     </div>
                 </div>
 
-                <!-- 梦境时间 -->
+                <!-- 做梦日期 -->
                 <div class="form-group">
-                    <label for="dreamDate">梦境时间</label>
+                    <label for="dreamDate">做梦日期</label>
                     <input type="date" id="dreamDate" name="dreamDate" required>
-                    <div class="input-hint">请选择做梦的日期</div>
                 </div>
 
-                <!-- 心情选择 -->
+                <!-- 醒来心情 -->
                 <div class="form-group">
-                    <label>梦醒时的心情</label>
-                    <div class="mood-group">
-                        <label class="mood-label">
-                            <input type="radio" name="mood" value="happy" required>
-                            <span>😊 开心</span>
+                    <label>醒来心情</label>
+                    <div class="radio-group">
+                        <label class="radio-label">
+                            <input type="radio" name="mood" value="good" required>
+                            <span>愉悦</span>
                         </label>
-                        <label class="mood-label">
+                        <label class="radio-label">
                             <input type="radio" name="mood" value="neutral">
-                            <span>😐 平静</span>
+                            <span>平静</span>
                         </label>
-                        <label class="mood-label">
-                            <input type="radio" name="mood" value="anxious">
-                            <span>😰 焦虑</span>
-                        </label>
-                        <label class="mood-label">
-                            <input type="radio" name="mood" value="scared">
-                            <span>😨 害怕</span>
-                        </label>
-                        <label class="mood-label">
-                            <input type="radio" name="mood" value="confused">
-                            <span>🤔 困惑</span>
-                        </label>
-                    </div>
-                </div>
-
-                <!-- 分析维度 -->
-                <div class="form-group">
-                    <label>分析维度（可多选）</label>
-                    <div class="checkbox-group">
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="meaning" checked>
-                            <span>梦境寓意</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="fortune" checked>
-                            <span>运势预测</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="suggestion" checked>
-                            <span>行动建议</span>
+                        <label class="radio-label">
+                            <input type="radio" name="mood" value="bad">
+                            <span>不安</span>
                         </label>
                     </div>
                 </div>
@@ -108,7 +79,7 @@
 
     <!-- 页脚信息 -->
     <footer class="footer">
-        <p>© 2025 AI运势测试 - 您的专属运势顾问</p>
+        <p>2025 AI运势测试 - 您的专属运势顾问</p>
     </footer>
 
     <script src="../../assets/js/test-page.js"></script>
