--- a/pages/tests/naming.html
+++ b/pages/tests/naming.html
@@ -46,15 +46,6 @@
                     </div>
                 </div>
 
-                <!-- 出生年份 -->
-                <div class="form-group">
-                    <label for="birthYear">出生年份</label>
-                    <select id="birthYear" name="birthYear" required>
-                        <option value="">请选择出生年份</option>
-                        <!-- JavaScript将动态填充年份选项 -->
-                    </select>
-                </div>
-
                 <!-- 起名要求 -->
                 <div class="form-group">
                     <label for="requirements">起名要求或偏好</label>
@@ -88,7 +79,7 @@
 
     <!-- 页脚信息 -->
     <footer class="footer">
-        <p>© 2025 AI运势测试 - 您的专属运势顾问</p>
+        <p>2025 AI运势测试 - 您的专属运势顾问</p>
     </footer>
 
     <script src="../../assets/js/test-page.js"></script>
