--- a/pages/tests/zodiac.html
+++ b/pages/tests/zodiac.html
@@ -18,113 +18,30 @@
         <!-- 测试表单区域 -->
         <div class="test-form-container">
             <h1 class="page-title">星座运势测试</h1>
-            <p class="page-subtitle">专业的星座运势分析与指导</p>
+            <p class="page-subtitle">专业解析星座运势走向</p>
 
             <form id="zodiacForm" class="test-form">
                 <!-- 星座选择 -->
                 <div class="form-group">
-                    <label>选择您的星座</label>
-                    <div class="zodiac-grid">
-                        <label class="zodiac-item" data-zodiac="aries">
-                            <input type="radio" name="zodiac" value="aries" required>
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♈</span>
-                                <span class="zodiac-name">白羊座</span>
-                                <span class="zodiac-date">3.21-4.19</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="taurus">
-                            <input type="radio" name="zodiac" value="taurus">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♉</span>
-                                <span class="zodiac-name">金牛座</span>
-                                <span class="zodiac-date">4.20-5.20</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="gemini">
-                            <input type="radio" name="zodiac" value="gemini">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♊</span>
-                                <span class="zodiac-name">双子座</span>
-                                <span class="zodiac-date">5.21-6.21</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="cancer">
-                            <input type="radio" name="zodiac" value="cancer">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♋</span>
-                                <span class="zodiac-name">巨蟹座</span>
-                                <span class="zodiac-date">6.22-7.22</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="leo">
-                            <input type="radio" name="zodiac" value="leo">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♌</span>
-                                <span class="zodiac-name">狮子座</span>
-                                <span class="zodiac-date">7.23-8.22</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="virgo">
-                            <input type="radio" name="zodiac" value="virgo">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♍</span>
-                                <span class="zodiac-name">处女座</span>
-                                <span class="zodiac-date">8.23-9.22</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="libra">
-                            <input type="radio" name="zodiac" value="libra">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♎</span>
-                                <span class="zodiac-name">天秤座</span>
-                                <span class="zodiac-date">9.23-10.23</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="scorpio">
-                            <input type="radio" name="zodiac" value="scorpio">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♏</span>
-                                <span class="zodiac-name">天蝎座</span>
-                                <span class="zodiac-date">10.24-11.22</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="sagittarius">
-                            <input type="radio" name="zodiac" value="sagittarius">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♐</span>
-                                <span class="zodiac-name">射手座</span>
-                                <span class="zodiac-date">11.23-12.21</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="capricorn">
-                            <input type="radio" name="zodiac" value="capricorn">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♑</span>
-                                <span class="zodiac-name">摩羯座</span>
-                                <span class="zodiac-date">12.22-1.19</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="aquarius">
-                            <input type="radio" name="zodiac" value="aquarius">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♒</span>
-                                <span class="zodiac-name">水瓶座</span>
-                                <span class="zodiac-date">1.20-2.18</span>
-                            </div>
-                        </label>
-                        <label class="zodiac-item" data-zodiac="pisces">
-                            <input type="radio" name="zodiac" value="pisces">
-                            <div class="zodiac-content">
-                                <span class="zodiac-icon">♓</span>
-                                <span class="zodiac-name">双鱼座</span>
-                                <span class="zodiac-date">2.19-3.20</span>
-                            </div>
-                        </label>
-                    </div>
+                    <label for="zodiacSign">您的星座</label>
+                    <select id="zodiacSign" name="zodiacSign" required>
+                        <option value="">请选择您的星座</option>
+                        <option value="aries">白羊座 (3.21-4.19)</option>
+                        <option value="taurus">金牛座 (4.20-5.20)</option>
+                        <option value="gemini">双子座 (5.21-6.21)</option>
+                        <option value="cancer">巨蟹座 (6.22-7.22)</option>
+                        <option value="leo">狮子座 (7.23-8.22)</option>
+                        <option value="virgo">处女座 (8.23-9.22)</option>
+                        <option value="libra">天秤座 (9.23-10.23)</option>
+                        <option value="scorpio">天蝎座 (10.24-11.22)</option>
+                        <option value="sagittarius">射手座 (11.23-12.21)</option>
+                        <option value="capricorn">摩羯座 (12.22-1.19)</option>
+                        <option value="aquarius">水瓶座 (1.20-2.18)</option>
+                        <option value="pisces">双鱼座 (2.19-3.20)</option>
+                    </select>
                 </div>
 
-                <!-- 运势周期选择 -->
+                <!-- 运势周期 -->
                 <div class="form-group">
                     <label>运势周期</label>
                     <div class="radio-group">
@@ -143,33 +60,6 @@
                         <label class="radio-label">
                             <input type="radio" name="period" value="year">
                             <span>年度运势</span>
-                        </label>
-                    </div>
-                </div>
-
-                <!-- 分析维度 -->
-                <div class="form-group">
-                    <label>分析维度（可多选）</label>
-                    <div class="checkbox-group">
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="overview" checked>
-                            <span>综合运势</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="love" checked>
-                            <span>感情运势</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="career" checked>
-                            <span>事业运势</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="wealth" checked>
-                            <span>财运分析</span>
-                        </label>
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="aspects" value="health" checked>
-                            <span>健康运势</span>
                         </label>
                     </div>
                 </div>
@@ -196,7 +86,7 @@
 
     <!-- 页脚信息 -->
     <footer class="footer">
-        <p>© 2025 AI运势测试 - 您的专属运势顾问</p>
+        <p>2025 AI运势测试 - 您的专属运势顾问</p>
     </footer>
 
     <script src="../../assets/js/test-page.js"></script>
