改进：八字运势测试页面的日期和时间选择

--- a/pages/tests/bazi.html
+++ b/pages/tests/bazi.html
@@ -46,10 +46,58 @@
                     </div>
                 </div>
 
-                <!-- 出生日期和时间 -->
+                <!-- 出生日期 -->
                 <div class="form-group">
-                    <label for="birthDateTime">出生日期和时间</label>
-                    <input type="datetime-local" id="birthDateTime" name="birthDateTime" required>
+                    <label>出生日期</label>
+                    <div class="date-inputs">
+                        <div class="date-input-group">
+                            <input type="number" id="birthYear" name="birthYear" required min="1900" max="2024"
+                                   placeholder="年">
+                            <span class="date-label">年</span>
+                        </div>
+                        <div class="date-input-group">
+                            <input type="number" id="birthMonth" name="birthMonth" required min="1" max="12"
+                                   placeholder="月">
+                            <span class="date-label">月</span>
+                        </div>
+                        <div class="date-input-group">
+                            <input type="number" id="birthDay" name="birthDay" required min="1" max="31"
+                                   placeholder="日">
+                            <span class="date-label">日</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 出生时间 -->
+                <div class="form-group">
+                    <label for="birthTime">出生时间</label>
+                    <select id="birthTime" name="birthTime" required>
+                        <option value="">请选择出生时间段</option>
+                        <option value="0">00:00 - 00:59</option>
+                        <option value="1">01:00 - 01:59</option>
+                        <option value="2">02:00 - 02:59</option>
+                        <option value="3">03:00 - 03:59</option>
+                        <option value="4">04:00 - 04:59</option>
+                        <option value="5">05:00 - 05:59</option>
+                        <option value="6">06:00 - 06:59</option>
+                        <option value="7">07:00 - 07:59</option>
+                        <option value="8">08:00 - 08:59</option>
+                        <option value="9">09:00 - 09:59</option>
+                        <option value="10">10:00 - 10:59</option>
+                        <option value="11">11:00 - 11:59</option>
+                        <option value="12">12:00 - 12:59</option>
+                        <option value="13">13:00 - 13:59</option>
+                        <option value="14">14:00 - 14:59</option>
+                        <option value="15">15:00 - 15:59</option>
+                        <option value="16">16:00 - 16:59</option>
+                        <option value="17">17:00 - 17:59</option>
+                        <option value="18">18:00 - 18:59</option>
+                        <option value="19">19:00 - 19:59</option>
+                        <option value="20">20:00 - 20:59</option>
+                        <option value="21">21:00 - 21:59</option>
+                        <option value="22">22:00 - 22:59</option>
+                        <option value="23">23:00 - 23:59</option>
+                    </select>
                 </div>
 
                 <!-- 出生地点 -->
